--- a/index.html
+++ b/index.html
@@ -4,12 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <script src="script.js"></script>
     <title>Calculator</title>
 </head>
 <body>
     <div class="calculator">
         <div class="screen">0</div>
+        <button id="C">C</button>
+        <button id="delate">←</button>
+        <button>/</button>
+        <button>*</button>
+        <button>7</button>
+        <button>8</button>
+        <button>9</button>
+        <button>-</button>
+        <button>4</button>
+        <button>5</button>
+        <button>6</button>
+        <button>+</button>
+        <button>1</button>
+        <button>2</button>
+        <button>3</button>
+        <button id="equal">=</button>
+        <button id="zero">0</button>
+        <button>.</button>
     </div>
 </body>
-<script></script>
 </html>
