--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
     <title>Calculator</title>
 </head>
 <body>
     <div class="calculator">
         <div class="screen">0</div>
         <button id="C">C</button>
-        <button id="delate">←</button>
+        <button id="delete">←</button>
         <button>/</button>
         <button>*</button>
         <button>7</button>
@@ -30,4 +29,5 @@
         <button>.</button>
     </div>
 </body>
+<script src="script.js"></script>
 </html>
