--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Aqui tenemos un ejemplo de un código HTML para una calculadora simple. -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Esto es para el archivo HTML se conecte con el archivo CSS -->
     <link rel="stylesheet" href="styles.css">
     <title>Calculator</title>
 </head>
 <body>
+    <!-- El contenedor principal de la calculadora -->
     <div class="calculator">
+        <!-- Aquí están los botones de la calculadora y la pantalla donde se muestran los resultados. -->
         <div class="screen">0</div>
         <button id="C">C</button>
         <button id="delete">←</button>
+        <!-- El orden de los botones es importante para la usabilidad de la calculadora. -->
         <button>/</button>
         <button>*</button>
         <button>7</button>
@@ -29,5 +34,6 @@
         <button>.</button>
     </div>
 </body>
+<!-- Aquí se conecta el archivo JavaScript que contiene la lógica de la calculadora. -->
 <script src="script.js"></script>
 </html>
